--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.4",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "sass": "^1.74.1",
+        "sass-loader": "^14.1.1",
+        "vite": "^5.0",
+        "vite-plugin-laravel": "^0.3.1"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "vue": "^3.4.21"
     }
 }
